--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ nav > a {
 }
 
 article {
-  display: inline;
+  display: inline-block;
 }
 
 article > div {
@@ -72,15 +72,21 @@ article > div {
 }
 
 article > img {
-  height: 500px;
+  height: 400px;
+  display: block;
 }
 
 div > p {
   margin-bottom: 5px;
 }
 
-.container-events {
+.container-events,
+.container-about {
   display: block;
   text-align: left;
   margin: 30px;
+}
+
+.container-about {
+  width: 600px;
 }
