--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,10 +25,17 @@ div {
 }
 .container {
   background-color: black;
-  height: 80px;
   width: 100%;
   color: white;
   text-align: center;
+}
+
+.container > div {
+  margin-bottom: 40px;
+}
+
+h2 {
+  font-size: 30px;
 }
 
 #logo {
@@ -39,9 +46,6 @@ div {
 
 #subtitulo {
   width: 300px;
-
-  text-align: center;
-  margin-left: 160px;
   margin: 0px auto;
 }
 
@@ -65,6 +69,7 @@ nav > a {
 
 article {
   display: inline-block;
+  text-align: left;
 }
 
 article > div {
@@ -81,7 +86,8 @@ div > p {
 }
 
 .container-events,
-.container-about {
+.container-about,
+.container-contact {
   display: block;
   text-align: left;
   margin: 30px;
