--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,11 @@ div {
   width: 100%;
   color: white;
   text-align: center;
+  position: relative;
 }
 
 .container > div {
-  margin-bottom: 40px;
+  margin: 10px;
 }
 
 h2 {
@@ -39,9 +40,10 @@ h2 {
 }
 
 #logo {
-  height: 80px;
-
-  padding-left: 30px;
+  height: 90px;
+  position: absolute;
+  right: 100px;
+  top: -35px;
 }
 
 #subtitulo {
