--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,28 +12,30 @@ body {
 
 h1 {
   color: white;
-  font-size: 80px;
+  font-size: 55px;
   text-shadow: 5px 5px black;
+}
+
+.p-events {
+  margin-left: 28px;
 }
 header {
   background-image: url(../img/design1_image2.jpg);
   background-size: cover;
-  background-position: center center;
+  background-position: 0 40%;
   max-width: 100%;
-  min-height: 40vh;
-  max-height: 40vh;
+  min-height: 20vh;
+  max-height: 20vh;
   text-align: center;
 }
 
-div {
-  display: inline-block;
-}
 .container {
   background-color: black;
   width: 100%;
   color: white;
   text-align: center;
   position: relative;
+  display: inline-block;
 }
 
 .container > div {
@@ -63,16 +65,19 @@ main {
 }
 nav {
   display: inline-block;
-  width: 200px;
+  width: 300px;
+  position: relative;
+  top: -30px;
 }
 
 a[href="#"] {
   color: black;
+  font-weight: bold;
   text-decoration: none;
 }
 nav > a {
   display: block;
-  width: 50px;
+  font-size: 18px;
   margin: 2rem;
   text-align: center;
 }
@@ -86,7 +91,7 @@ article > div {
   margin: 0px auto;
 }
 
-article > img {
+main > img {
   height: 300px;
   display: block;
 }
@@ -105,4 +110,8 @@ div > p {
 
 .container-about {
   width: 600px;
+}
+
+.prueba {
+  text-align: center;
 }
