Todos los archivos corregidos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,9 +65,16 @@ main {
 }
 nav {
   display: inline-block;
-  width: 300px;
   position: relative;
-  top: -30px;
+  top: -370px;
+}
+
+.nav-a {
+  top: -510px;
+}
+
+.nav-c {
+  top: -270px;
 }
 
 a[href="#"] {
@@ -93,7 +100,7 @@ article > div {
 
 main > img {
   height: 300px;
-  display: block;
+  text-align: center;
 }
 
 div > p {
@@ -106,10 +113,19 @@ div > p {
   display: block;
   text-align: left;
   margin: 30px;
+  width: 600px;
 }
 
 .container-about {
-  width: 600px;
+  width: 680px;
+}
+
+.container-contact {
+  width: 422px;
+}
+
+.paragraph-contact {
+  margin-top: 20px;
 }
 
 .prueba {
