--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,6 @@ main {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
-  margin-bottom: 300px;
 }
 nav {
   margin-top: 0.6rem;
@@ -74,7 +73,7 @@ nav {
 }
 
 a[href="#"] {
-  color: black;
+  color: white;
   font-weight: bold;
   text-decoration: none;
 }
@@ -83,6 +82,7 @@ nav > a {
   font-size: 18px;
   margin: 2rem;
   flex-direction: column;
+  color: #eac100;
 }
 
 main > img {
@@ -126,4 +126,58 @@ dt {
 
 #rulesBackground {
   background-image: url(../img/hockeyPrueba.jpg);
+}
+
+.section-tables {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+table {
+  border-collapse: collapse;
+  table-layout: auto;
+  width: 50rem;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(5px);
+}
+
+caption {
+  color: white;
+  text-align: left;
+  text-decoration: underline;
+  padding: 2rem 0 2rem 0;
+}
+
+th,
+td {
+  padding: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  text-align: center;
+  color: white;
+}
+
+thead {
+  background-color: #eac100;
+  font-weight: bolder;
+}
+
+.container-additional {
+  margin: 3rem;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(5px);
+  border-radius: 1.5rem;
+}
+
+.container-additional > p {
+  margin: 1.5rem;
+  color: rgb(219, 216, 216);
+}
+
+#gamesBackground {
+  background-image: url(../img/backgroundGames.svg);
+}
+
+#table-title {
+  color: white;
+  margin-top: 3rem;
 }
