--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  /* width: 100vw; */
+  /* width: 100vw;*/
   height: 100vh;
 }
 
@@ -27,7 +27,10 @@ header {
   max-width: 100%;
   min-height: 40vh;
   max-height: 20vh;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .container-text-logo {
@@ -59,6 +62,7 @@ main {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  flex-basis: 50%;
 }
 nav {
   margin-top: 0.6rem;
@@ -86,15 +90,24 @@ nav > a {
 }
 
 main > img {
-  height: 20rem;
+  max-height: 25rem;
+  max-width: 40rem;
   object-fit: cover;
 }
 
 .container-events,
 .container-about,
 .container-contact {
-  margin: 30px;
+  margin: 15px;
   width: 660px;
+  color: white;
+}
+
+#imgAbout {
+  background-position: 0 20% !important;
+}
+p > a {
+  color: #eac100;
 }
 
 .paragraph-contact {
@@ -102,9 +115,13 @@ main > img {
 }
 
 .container-nav-main {
-  /* text-align: center; */
   display: flex;
-  justify-content: center;
+  background-image: url(../img/backgroundGames.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 80vh;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .container-list {
