--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ thead {
   background-image: url(../img/backgroundGames.svg);
 }
 
-#table-title {
+#tableTitle {
   color: white;
   margin-top: 3rem;
 }
