--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ thead {
   color: white;
   text-align: center;
   font-size: 25px;
+  margin-top: 1rem;
   padding-bottom: 1rem;
 }
 
@@ -310,6 +311,12 @@ select {
   height: auto;
 }
 
+#fieldsetSizes>fieldset,
+.container-fieldsets>fieldset {
+  border: none;
+}
+
+
 #fieldsetPermission {
   height: auto;
   padding: 1rem;
@@ -386,38 +393,4 @@ h4 {
 
 iframe {
   border-radius: 1rem;
-}
-
-@media screen and (max-width: 919px) {
-  header {
-    text-align: center;
-    min-height: 30vh;
-    background-position: 0 20%;
-  }
-
-  header>h1 {
-    font-size: 50px;
-  }
-
-  #logo {
-    height: 55px;
-    position: absolute;
-    right: 3rem;
-  }
-
-
-  nav>a {
-    display: flex;
-    font-size: 18px;
-    margin: 2rem;
-    color: #eac100;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 820px) {
-  header {
-    text-align: center;
-  }
 }
